--- a/projetos/notebooks/Analyzing_Airbnb_Data/Analyzing_Airbnb_Data_Dublin.ipynb
+++ b/projetos/notebooks/Analyzing_Airbnb_Data/Analyzing_Airbnb_Data_Dublin.ipynb
@@ -506,7 +506,7 @@
       "source": [
         "Analyzing the histograms it's possible to identify that 'price' and 'minimum_nights' features have huge outliers that modify the distribution of the histogram, showing almost only a single bar far from the maximum value.\n",
         "\n",
-        "'number_of_reviews' and 'reviews_per_month' features also have outliers but you can see other bars in the histogram\n"
+        "'number_of_reviews' and 'reviews_per_month' features also have outliers but you can see other bars in the histogram.\n"
       ]
     },
     {
